@@ -1,25 +1,27 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.tracer;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.apache.accumulo.fate.util.UtilWaitThread.sleepUninterruptibly;
 
-import java.io.IOException;
+import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.net.ServerSocket;
 import java.nio.channels.ServerSocketChannel;
@@ -28,14 +30,16 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.Collectors;
 
 import org.apache.accumulo.core.Constants;
+import org.apache.accumulo.core.classloader.ClassLoaderUtil;
+import org.apache.accumulo.core.client.Accumulo;
+import org.apache.accumulo.core.client.AccumuloClient;
 import org.apache.accumulo.core.client.AccumuloException;
 import org.apache.accumulo.core.client.AccumuloSecurityException;
 import org.apache.accumulo.core.client.BatchWriter;
 import org.apache.accumulo.core.client.BatchWriterConfig;
-import org.apache.accumulo.core.client.Connector;
-import org.apache.accumulo.core.client.Instance;
 import org.apache.accumulo.core.client.IteratorSetting;
 import org.apache.accumulo.core.client.MutationsRejectedException;
 import org.apache.accumulo.core.client.TableExistsException;
@@ -46,28 +50,20 @@ import org.apache.accumulo.core.client.security.tokens.KerberosToken;
 import org.apache.accumulo.core.client.security.tokens.PasswordToken;
 import org.apache.accumulo.core.conf.AccumuloConfiguration;
 import org.apache.accumulo.core.conf.Property;
-import org.apache.accumulo.core.conf.SiteConfiguration;
 import org.apache.accumulo.core.data.Mutation;
 import org.apache.accumulo.core.data.Value;
 import org.apache.accumulo.core.iterators.user.AgeOffFilter;
-import org.apache.accumulo.fate.zookeeper.IZooReaderWriter;
+import org.apache.accumulo.core.util.threads.ThreadPools;
+import org.apache.accumulo.fate.zookeeper.ZooReaderWriter;
 import org.apache.accumulo.fate.zookeeper.ZooUtil.NodeExistsPolicy;
-import org.apache.accumulo.server.Accumulo;
+import org.apache.accumulo.server.ServerContext;
 import org.apache.accumulo.server.ServerOpts;
-import org.apache.accumulo.server.client.HdfsZooInstance;
-import org.apache.accumulo.server.conf.ServerConfigurationFactory;
-import org.apache.accumulo.server.fs.VolumeManager;
-import org.apache.accumulo.server.fs.VolumeManagerImpl;
-import org.apache.accumulo.server.metrics.MetricsSystemHelper;
+import org.apache.accumulo.server.ServerUtil;
 import org.apache.accumulo.server.security.SecurityUtil;
-import org.apache.accumulo.server.util.time.SimpleTimer;
-import org.apache.accumulo.server.zookeeper.ZooReaderWriter;
-import org.apache.accumulo.start.classloader.vfs.AccumuloVFSClassLoader;
 import org.apache.accumulo.tracer.thrift.RemoteSpan;
 import org.apache.accumulo.tracer.thrift.SpanReceiver.Iface;
 import org.apache.accumulo.tracer.thrift.SpanReceiver.Processor;
 import org.apache.hadoop.io.Text;
-import org.apache.htrace.Span;
 import org.apache.thrift.TByteArrayOutputStream;
 import org.apache.thrift.TException;
 import org.apache.thrift.protocol.TCompactProtocol;
@@ -76,7 +72,6 @@ import org.apache.thrift.server.TThreadPoolServer;
 import org.apache.thrift.transport.TServerSocket;
 import org.apache.thrift.transport.TServerTransport;
 import org.apache.thrift.transport.TTransport;
-import org.apache.thrift.transport.TTransportException;
 import org.apache.zookeeper.WatchedEvent;
 import org.apache.zookeeper.Watcher;
 import org.apache.zookeeper.Watcher.Event.EventType;
@@ -84,20 +79,27 @@ import org.apache.zookeeper.Watcher.Event.KeeperState;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-public class TraceServer implements Watcher {
+public class TraceServer implements Watcher, AutoCloseable {
 
-  final private static Logger log = LoggerFactory.getLogger(TraceServer.class);
-  final private ServerConfigurationFactory serverConfiguration;
-  final private TServer server;
-  final private AtomicReference<BatchWriter> writer;
-  final private Connector connector;
+  private static final Logger log = LoggerFactory.getLogger(TraceServer.class);
+  private final ServerContext context;
+  private final TServer server;
+  private final AtomicReference<BatchWriter> writer;
+  private final AccumuloClient accumuloClient;
   final String tableName;
-  final private static int BATCH_WRITER_MAX_LATENCY = 5;
-  final private static long SCHEDULE_PERIOD = 1000;
-  final private static long SCHEDULE_DELAY = 1000;
+  private static final int BATCH_WRITER_MAX_LATENCY = 5;
+  private static final long SCHEDULE_PERIOD = 1000;
+  private static final long SCHEDULE_DELAY = 1000;
 
   private static void put(Mutation m, String cf, String cq, byte[] bytes, int len) {
     m.put(new Text(cf), new Text(cq), new Value(bytes, 0, len));
+  }
+
+  @Override
+  public void close() {
+    if (accumuloClient != null) {
+      accumuloClient.close();
+    }
   }
 
   static class ByteArrayTransport extends TTransport {
@@ -109,7 +111,7 @@ public class TraceServer implements Watcher {
     }
 
     @Override
-    public void open() throws TTransportException {}
+    public void open() {}
 
     @Override
     public void close() {}
@@ -120,7 +122,7 @@ public class TraceServer implements Watcher {
     }
 
     @Override
-    public void write(byte[] buf, int off, int len) throws TTransportException {
+    public void write(byte[] buf, int off, int len) {
       out.write(buf, off, len);
     }
 
@@ -142,18 +144,17 @@ public class TraceServer implements Watcher {
       Mutation indexMutation = new Mutation(new Text("idx:" + s.svc + ":" + startString));
       long diff = s.stop - s.start;
       indexMutation.put(new Text(s.description), new Text(s.sender),
-          new Value((idString + ":" + Long.toHexString(diff)).getBytes(UTF_8)));
+          new Value(idString + ":" + Long.toHexString(diff)));
       ByteArrayTransport transport = new ByteArrayTransport();
       TCompactProtocol protocol = new TCompactProtocol(transport);
       s.write(protocol);
-      String parentString = Long.toHexString(s.parentId);
-      if (s.parentId == Span.ROOT_SPAN_ID)
-        parentString = "";
+      String parentString = s.getParentIdsSize() == 0 ? "" : s.getParentIds().stream()
+          .map(Long::toHexString).collect(Collectors.toList()).toString();
       put(spanMutation, "span", parentString + ":" + Long.toHexString(s.spanId), transport.get(),
           transport.len());
       // Map the root span to time so we can look up traces by time
       Mutation timeMutation = null;
-      if (s.parentId == Span.ROOT_SPAN_ID) {
+      if (s.getParentIdsSize() == 0) {
         timeMutation = new Mutation(new Text("start:" + startString));
         put(timeMutation, "id", idString, transport.get(), transport.len());
       }
@@ -163,14 +164,15 @@ public class TraceServer implements Watcher {
          * Check for null, because we expect spans to come in much faster than flush calls. In the
          * case of failure, we'd rather avoid logging tons of NPEs.
          */
-        if (null == writer) {
+        if (writer == null) {
           log.warn("writer is not ready; discarding span.");
           return;
         }
         writer.addMutation(spanMutation);
         writer.addMutation(indexMutation);
-        if (timeMutation != null)
+        if (timeMutation != null) {
           writer.addMutation(timeMutation);
+        }
       } catch (MutationsRejectedException exception) {
         log.warn("Unable to write mutation to table; discarding span. set log"
             + " level to DEBUG for span information and stacktrace. cause: " + exception);
@@ -178,8 +180,8 @@ public class TraceServer implements Watcher {
           log.debug("discarded span due to rejection of mutation: " + spanMutation, exception);
         }
         /*
-         * XXX this could be e.g. an IllegalArgumentExceptoion if we're trying to write this
-         * mutation to a writer that has been closed since we retrieved it
+         * XXX this could be e.g. an IllegalArgumentException if we're trying to write this mutation
+         * to a writer that has been closed since we retrieved it
          */
       } catch (RuntimeException exception) {
         log.warn("Unable to write mutation to table; discarding span. set log"
@@ -190,16 +192,15 @@ public class TraceServer implements Watcher {
 
   }
 
-  public TraceServer(ServerConfigurationFactory serverConfiguration, String hostname)
-      throws Exception {
-    this.serverConfiguration = serverConfiguration;
-    log.info("Version " + Constants.VERSION);
-    log.info("Instance " + serverConfiguration.getInstance().getInstanceID());
-    AccumuloConfiguration conf = serverConfiguration.getConfiguration();
+  public TraceServer(ServerContext context, String hostname) throws Exception {
+    this.context = context;
+    log.info("Version {}", Constants.VERSION);
+    log.info("Instance {}", context.getInstanceID());
+    AccumuloConfiguration conf = context.getConfiguration();
     tableName = conf.get(Property.TRACE_TABLE);
-    connector = ensureTraceTableExists(conf);
+    accumuloClient = ensureTraceTableExists(conf);
 
-    int ports[] = conf.getPort(Property.TRACE_PORT);
+    int[] ports = conf.getPort(Property.TRACE_PORT);
     ServerSocket sock = null;
     for (int port : ports) {
       ServerSocket s = ServerSocketChannel.open().socket();
@@ -212,7 +213,7 @@ public class TraceServer implements Watcher {
         log.warn("Unable to start trace server on port {}", port);
       }
     }
-    if (null == sock) {
+    if (sock == null) {
       throw new RuntimeException(
           "Unable to start trace server on configured ports: " + Arrays.toString(ports));
     }
@@ -220,9 +221,15 @@ public class TraceServer implements Watcher {
     TThreadPoolServer.Args options = new TThreadPoolServer.Args(transport);
     options.processor(new Processor<Iface>(new Receiver()));
     server = new TThreadPoolServer(options);
-    registerInZooKeeper(sock.getInetAddress().getHostAddress() + ":" + sock.getLocalPort(),
-        conf.get(Property.TRACE_ZK_PATH));
-    writer = new AtomicReference<>(this.connector.createBatchWriter(tableName,
+    // if sock is bound to the wildcard address, the local address will be 0.0.0.0.
+    // check for this, and try using InetAddress.getLocalHost instead.
+    // the problem is registering 0.0.0.0 in zookeeper doesn't work for non-local
+    // services (like remote tablet servers)
+    String hostAddr = sock.getInetAddress().getHostAddress();
+    if ("0.0.0.0".equals(hostAddr))
+      hostAddr = InetAddress.getLocalHost().getHostAddress();
+    registerInZooKeeper(hostAddr + ":" + sock.getLocalPort(), conf.get(Property.TRACE_ZK_PATH));
+    writer = new AtomicReference<>(this.accumuloClient.createBatchWriter(tableName,
         new BatchWriterConfig().setMaxLatency(BATCH_WRITER_MAX_LATENCY, TimeUnit.SECONDS)));
   }
 
@@ -231,19 +238,14 @@ public class TraceServer implements Watcher {
    * misconfigurations that aren't likely to change on retry).
    *
    * @return a working Connection that can be reused
-   * @throws ClassNotFoundException
-   *           if TRACE_TOKEN_TYPE is set to a class that we can't load.
-   * @throws InstantiationException
+   * @throws ReflectiveOperationException
    *           if we fail to create an instance of TRACE_TOKEN_TYPE.
-   * @throws IllegalAccessException
-   *           if the class pointed to by TRACE_TOKEN_TYPE is private.
    * @throws AccumuloSecurityException
    *           if the trace user has the wrong permissions
    */
-  private Connector ensureTraceTableExists(final AccumuloConfiguration conf)
-      throws AccumuloSecurityException, ClassNotFoundException, InstantiationException,
-      IllegalAccessException {
-    Connector connector = null;
+  private AccumuloClient ensureTraceTableExists(final AccumuloConfiguration conf)
+      throws AccumuloSecurityException, ReflectiveOperationException {
+    AccumuloClient accumuloClient = null;
     while (true) {
       try {
         final boolean isDefaultTokenType =
@@ -262,78 +264,74 @@ public class TraceServer implements Watcher {
           at = new PasswordToken(conf.get(p).getBytes(UTF_8));
         } else {
           Properties props = new Properties();
-          AuthenticationToken token =
-              AccumuloVFSClassLoader.getClassLoader().loadClass(conf.get(Property.TRACE_TOKEN_TYPE))
-                  .asSubclass(AuthenticationToken.class).newInstance();
+          AuthenticationToken token = ClassLoaderUtil
+              .loadClass(conf.get(Property.TRACE_TOKEN_TYPE), AuthenticationToken.class)
+              .getDeclaredConstructor().newInstance();
 
           int prefixLength = Property.TRACE_TOKEN_PROPERTY_PREFIX.getKey().length();
           for (Entry<String,String> entry : loginMap.entrySet()) {
             props.put(entry.getKey().substring(prefixLength), entry.getValue());
           }
-
           token.init(props);
-
           at = token;
         }
 
-        connector = serverConfiguration.getInstance().getConnector(principal, at);
-        if (!connector.tableOperations().exists(tableName)) {
-          connector.tableOperations().create(tableName);
+        accumuloClient =
+            Accumulo.newClient().from(context.getProperties()).as(principal, at).build();
+
+        if (!accumuloClient.tableOperations().exists(tableName)) {
+          accumuloClient.tableOperations().create(tableName);
           IteratorSetting setting = new IteratorSetting(10, "ageoff", AgeOffFilter.class.getName());
-          AgeOffFilter.setTTL(setting, 7 * 24 * 60 * 60 * 1000l);
-          connector.tableOperations().attachIterator(tableName, setting);
+          AgeOffFilter.setTTL(setting, 7 * 24 * 60 * 60 * 1000L);
+          accumuloClient.tableOperations().attachIterator(tableName, setting);
         }
-        connector.tableOperations().setProperty(tableName, Property.TABLE_FORMATTER_CLASS.getKey(),
-            TraceFormatter.class.getName());
+        accumuloClient.tableOperations().setProperty(tableName,
+            Property.TABLE_FORMATTER_CLASS.getKey(), TraceFormatter.class.getName());
         break;
-      } catch (AccumuloException | TableExistsException | TableNotFoundException | IOException
+      } catch (AccumuloException | TableExistsException | TableNotFoundException
           | RuntimeException ex) {
         log.info("Waiting to checking/create the trace table.", ex);
         sleepUninterruptibly(1, TimeUnit.SECONDS);
+        if (accumuloClient != null) {
+          accumuloClient.close();
+          accumuloClient = null;
+        }
       }
     }
-    return connector;
+    return accumuloClient;
   }
 
-  public void run() throws Exception {
-    SimpleTimer.getInstance(serverConfiguration.getConfiguration()).schedule(new Runnable() {
-      @Override
-      public void run() {
-        flush();
-      }
-    }, SCHEDULE_DELAY, SCHEDULE_PERIOD);
+  public void run() {
+    ThreadPools.createGeneralScheduledExecutorService(context.getConfiguration())
+        .scheduleWithFixedDelay(this::flush, SCHEDULE_DELAY, SCHEDULE_PERIOD,
+            TimeUnit.MILLISECONDS);
     server.serve();
   }
 
   private void flush() {
     try {
       final BatchWriter writer = this.writer.get();
-      if (null != writer) {
+      if (writer != null) {
         writer.flush();
       } else {
         // We don't have a writer. If the table exists, try to make a new writer.
-        if (connector.tableOperations().exists(tableName)) {
+        if (accumuloClient.tableOperations().exists(tableName)) {
           resetWriter();
         }
       }
-    } catch (MutationsRejectedException exception) {
+    } catch (MutationsRejectedException | RuntimeException exception) {
       log.warn("Problem flushing traces, resetting writer. Set log level to"
           + " DEBUG to see stacktrace. cause: " + exception);
       log.debug("flushing traces failed due to exception", exception);
       resetWriter();
       /* XXX e.g. if the writer was closed between when we grabbed it and when we called flush. */
-    } catch (RuntimeException exception) {
-      log.warn("Problem flushing traces, resetting writer. Set log level to"
-          + " DEBUG to see stacktrace. cause: " + exception);
-      log.debug("flushing traces failed due to exception", exception);
-      resetWriter();
     }
   }
 
   private void resetWriter() {
     BatchWriter writer = null;
     try {
-      writer = connector.createBatchWriter(tableName,
+      writer = accumuloClient.createBatchWriter(tableName,
           new BatchWriterConfig().setMaxLatency(BATCH_WRITER_MAX_LATENCY, TimeUnit.SECONDS));
     } catch (Exception ex) {
       log.warn("Unable to create a batch writer, will retry. Set log level to"
@@ -343,7 +341,7 @@ public class TraceServer implements Watcher {
       /* Trade in the new writer (even if null) for the one we need to close. */
       writer = this.writer.getAndSet(writer);
       try {
-        if (null != writer) {
+        if (writer != null) {
           writer.close();
         }
       } catch (Exception ex) {
@@ -355,25 +353,19 @@ public class TraceServer implements Watcher {
   }
 
   private void registerInZooKeeper(String name, String root) throws Exception {
-    IZooReaderWriter zoo = ZooReaderWriter.getInstance();
+    ZooReaderWriter zoo = context.getZooReaderWriter();
     zoo.putPersistentData(root, new byte[0], NodeExistsPolicy.SKIP);
-    log.info("Registering tracer " + name + " at " + root);
+    log.info("Registering tracer {} at {}", name, root);
     String path = zoo.putEphemeralSequential(root + "/trace-", name.getBytes(UTF_8));
     zoo.exists(path, this);
   }
 
   private static void loginTracer(AccumuloConfiguration acuConf) {
     try {
-      Class<? extends AuthenticationToken> traceTokenType = AccumuloVFSClassLoader.getClassLoader()
-          .loadClass(acuConf.get(Property.TRACE_TOKEN_TYPE)).asSubclass(AuthenticationToken.class);
+      Class<? extends AuthenticationToken> traceTokenType = ClassLoaderUtil
+          .loadClass(acuConf.get(Property.TRACE_TOKEN_TYPE), AuthenticationToken.class);
 
-      if (!(KerberosToken.class.isAssignableFrom(traceTokenType))) {
-        // We're not using Kerberos to talk to Accumulo, but we might still need it for talking to
-        // HDFS/ZK for
-        // instance information.
-        log.info("Handling login under the assumption that Accumulo users are not using Kerberos.");
-        SecurityUtil.serverLogin(acuConf);
-      } else {
+      if (KerberosToken.class.isAssignableFrom(traceTokenType)) {
         // We're using Kerberos to talk to Accumulo, so check for trace user specific auth details.
         // We presume this same user will have the needed access for the service to interact with
         // HDFS/ZK for
@@ -382,20 +374,28 @@ public class TraceServer implements Watcher {
         Map<String,String> loginMap =
             acuConf.getAllPropertiesWithPrefix(Property.TRACE_TOKEN_PROPERTY_PREFIX);
         String keyTab = loginMap.get(Property.TRACE_TOKEN_PROPERTY_PREFIX.getKey() + "keytab");
-        if (keyTab == null || keyTab.length() == 0) {
+        if (keyTab == null || keyTab.isEmpty()) {
           keyTab = acuConf.getPath(Property.GENERAL_KERBEROS_KEYTAB);
         }
-        if (keyTab == null || keyTab.length() == 0)
+        if (keyTab == null || keyTab.isEmpty()) {
           return;
+        }
 
         String principalConfig = acuConf.get(Property.TRACE_USER);
-        if (principalConfig == null || principalConfig.length() == 0)
+        if (principalConfig == null || principalConfig.isEmpty()) {
           return;
+        }
 
         log.info("Attempting to login as {} with {}", principalConfig, keyTab);
         SecurityUtil.serverLogin(acuConf, keyTab, principalConfig);
+      } else {
+        // We're not using Kerberos to talk to Accumulo, but we might still need it for talking to
+        // HDFS/ZK for
+        // instance information.
+        log.info("Handling login under the assumption that Accumulo users are not using Kerberos.");
+        SecurityUtil.serverLogin(acuConf);
       }
-    } catch (IOException | ClassNotFoundException exception) {
+    } catch (ClassNotFoundException exception) {
       final String msg =
           String.format("Failed to retrieve trace user token information based on property %1s.",
               Property.TRACE_TOKEN_TYPE);
@@ -406,39 +406,34 @@ public class TraceServer implements Watcher {
 
   public static void main(String[] args) throws Exception {
     final String app = "tracer";
-    Accumulo.setupLogging(app);
-    loginTracer(SiteConfiguration.getInstance());
     ServerOpts opts = new ServerOpts();
     opts.parseArgs(app, args);
-    Instance instance = HdfsZooInstance.getInstance();
-    ServerConfigurationFactory conf = new ServerConfigurationFactory(instance);
-    VolumeManager fs = VolumeManagerImpl.get();
-    MetricsSystemHelper.configure(TraceServer.class.getSimpleName());
-    Accumulo.init(fs, conf, app);
-    String hostname = opts.getAddress();
-    TraceServer server = new TraceServer(conf, hostname);
-    try {
+    ServerContext context = new ServerContext(opts.getSiteConfiguration());
+    loginTracer(context.getConfiguration());
+    ServerUtil.init(context, app);
+    try (TraceServer server = new TraceServer(context, opts.getAddress())) {
       server.run();
     } finally {
       log.info("tracer stopping");
-      ZooReaderWriter.getInstance().getZooKeeper().close();
+      context.getZooReaderWriter().getZooKeeper().close();
     }
   }
 
   @Override
   public void process(WatchedEvent event) {
-    log.debug("event " + event.getPath() + " " + event.getType() + " " + event.getState());
+    log.debug("event {} {} {}", event.getPath(), event.getType(), event.getState());
     if (event.getState() == KeeperState.Expired) {
-      log.warn("Trace server lost zookeeper registration at " + event.getPath());
+      log.warn("Trace server lost zookeeper registration at {} ", event.getPath());
       server.stop();
     } else if (event.getType() == EventType.NodeDeleted) {
-      log.warn("Trace server zookeeper entry lost " + event.getPath());
+      log.warn("Trace server zookeeper entry lost {}", event.getPath());
       server.stop();
     }
     if (event.getPath() != null) {
       try {
-        if (ZooReaderWriter.getInstance().exists(event.getPath(), this))
+        if (context.getZooReaderWriter().exists(event.getPath(), this)) {
           return;
+        }
       } catch (Exception ex) {
         log.error("{}", ex.getMessage(), ex);
       }
